fftip/fftipeldbonus/solution1/csim/build/apcc_db/apcc.log
apcc_db/fft.c: In function 'FFTipfn':
apcc_db/fft.c:732:29: error: too many arguments to function 'crealf'
   llvm_cbe_tmp__6 = (float )crealf(llvm_cbe_tmp__3, llvm_cbe_tmp__5);
                             ^~~~~~
apcc_db/fft.c:760:29: error: too many arguments to function 'cimagf'
   llvm_cbe_tmp__8 = (float )cimagf(llvm_cbe_tmp__3, llvm_cbe_tmp__5);
                             ^~~~~~
